
  * reportbug/utils.py
    - convert the config file name to UTF-8, avoinding a crash; thanks to Anders
      Lagerås for the report and to Carl Chenet for the patch; Closes: #578085
  * bin/reportbug
    - when configuring, show the complete text about SMTP host (part was hidden
      if using GTK+ UI); thanks to Elie De Brauwer for the report and patch;
      Closes: #583292

 -- Sandro Tosi <morph@debian.org>  Thu, 27 May 2010 22:20:51 +0200

reportbug (4.12.2) unstable; urgency=low

  * bin/reportbug
    - don't try to map package to source when using --from-buildd, and also
      force version set; thanks to Cyril Brulebois for reporting this (on IRC)
      and testing preliminary patches
    - correctly pass the 'timeout' parameter to 'check_built'; thanks to Daniel
      Bolton for the report and to Milan Vancura for the patch; Closes: #580382
  * reportbug/utils.py
    - generate a list of pseudoheaders (without duplicates), so that when
      writing them into the report body they are not repeated; thanks to Cyril
      Brulebois for the report; Closes: #579597
  * reportbug/ui/gtk2_ui.py
    - retrieve the 'presubj' keyword argument (passed when we have to show the
      presubj file), fixing a crash; thanks to Michael Schmitt for the report;
      Closes: #578711

 -- Sandro Tosi <morph@debian.org>  Wed, 12 May 2010 19:21:22 +0200

reportbug (4.12.1) unstable; urgency=low

  * reportbug/utils.py
    - only take file name and md5sum from Conffile from dpkg --status; thanks to
      all the reporters; Closes: #577986
  * reportbug/ui/text_ui.py
    - pass 'timeout' to search_bug, needed when filtering bugs; thanks to Matt
      Kraai for the report and patch; Closes: #578505

 -- Sandro Tosi <morph@debian.org>  Thu, 22 Apr 2010 21:59:02 +0200

reportbug (4.12) unstable; urgency=low

  * reportbug/debianbts.py
    - fix description for 'experimental' tag; thanks to Raphael Rigo for the
      report; Closes: #575044