@@ -7,8 +7,11 @@ reportbug (4.12.3) UNRELEASED; urgency=low
     - when configuring, show the complete text about SMTP host (part was hidden
       if using GTK+ UI); thanks to Elie De Brauwer for the report and patch;
       Closes: #583292
+  * bin/reportbug, reportbug/{debianbts.py, utils.py}
+    - don't present suite tags ('sid', 'lenny', etc) when running in modes lower
+      than 'advanced'; thanks to Julien Cristau for the report; Closes: #583890
 
- -- Sandro Tosi <morph@debian.org>  Thu, 27 May 2010 22:20:51 +0200
+ -- Sandro Tosi <morph@debian.org>  Sat, 05 Jun 2010 10:38:05 +0200
 
 reportbug (4.12.2) unstable; urgency=low
 
